--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -20,11 +20,18 @@
   margin-right: auto;
   width: 650px;
 }
+.description {
+    margin-bottom: 80px;
+    padding-right: 20px;
+}
 #factgetter {
   margin-top: 10px;
 }
-#whoamI {
-    text-align: center;
+.floatleft {
+    float: left;
+}
+.floatright {
+    float: right;
 }
 .gallery {
     width: 350px;
@@ -44,6 +51,7 @@ h1 {
 .image2{
     width: 300px;
     height: 300px;
+    padding-left: 20px;
 }
 .image4 {
     width: 200px;
@@ -65,4 +73,6 @@ h1 {
 .righttext {
     text-align: right;
 }
-
+#whoamI {
+    text-align: center;
+}
