--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -15,6 +15,9 @@
 .centertext {
     text-align: center;
 }
+#commentsection {
+    padding-left: 30px;
+}
 #content {
   margin-left: auto;
   margin-right: auto;
